# MRSStaticRRSRF

./: .gitignore  README.rst  pfpc_all_examples  plot_all_pfpc  plot_all_prsrf  pyproject.toml  reduce_all  reduce_all_dithsub  reduce_all_hd163_c2  reduce_all_hd163_c4  reduce_all_hd163_e3
MRSFringeCor/plotting/: plot_mrs_x1d.py  plot_spectra_dithers.py  plot_spectra_dithers_divide.py
MRSFringeCor/refs/: mrs_residfringe_chn1_long.fits  mrs_residfringe_chn1_medium.fits  mrs_residfringe_chn1_short.fits  mrs_residfringe_chn2_long.fits  mrs_residfringe_chn2_medium.fits  mrs_residfringe_chn2_short.fits  mrs_residfringe_chn3_long.fits  mrs_residfringe_chn3_medium.fits  mrs_residfringe_chn3_short.fits  mrs_residfringe_chn4_long.fits  mrs_residfringe_chn4_medium.fits  mrs_residfringe_chn4_short.fits
MRSFringeCor/utils/: leakcor_dithers.py  proc_mrs.py
MRSStaticRRSRF/plotting/: plot_delta_apcor.py  plot_dither_locations.py  plot_dithers_static_rrsrf.py  plot_mrs_x1d.py  plot_mrs_x1d_3ways.py  plot_prsrf.py  plot_sn_improve.py  plot_spectra_dithers_divide.py  plot_static_rrsrf.py
MRSStaticRRSRF/refs/: mrs_deltaapcor_dithsub_chn1_long.fits  mrs_deltaapcor_dithsub_chn1_medium.fits  mrs_deltaapcor_dithsub_chn1_short.fits  mrs_deltaapcor_dithsub_chn2_long.fits  mrs_deltaapcor_dithsub_chn2_medium.fits  mrs_deltaapcor_dithsub_chn2_short.fits  mrs_deltaapcor_dithsub_chn3_long.fits  mrs_deltaapcor_dithsub_chn3_medium.fits  mrs_deltaapcor_dithsub_chn3_short.fits  mrs_deltaapcor_dithsub_chn4_long.fits  mrs_deltaapcor_dithsub_chn4_medium.fits  mrs_deltaapcor_dithsub_chn4_short.fits  mrs_residfringe_chn1_long.fits  mrs_residfringe_chn1_medium.fits  mrs_residfringe_chn1_short.fits  mrs_residfringe_chn2_long.fits  mrs_residfringe_chn2_medium.fits  mrs_residfringe_chn2_short.fits  mrs_residfringe_chn3_long.fits  mrs_residfringe_chn3_medium.fits  mrs_residfringe_chn3_short.fits  mrs_residfringe_chn4_long.fits  mrs_residfringe_chn4_medium.fits  mrs_residfringe_chn4_short.fits  mrs_residfringe_dithsub_chn1_long.fits  mrs_residfringe_dithsub_chn1_medium.fits  mrs_residfringe_dithsub_chn1_short.fits  mrs_residfringe_dithsub_chn2_long.fits  mrs_residfringe_dithsub_chn2_medium.fits  mrs_residfringe_dithsub_chn2_short.fits  mrs_residfringe_dithsub_chn3_long.fits  mrs_residfringe_dithsub_chn3_medium.fits  mrs_residfringe_dithsub_chn3_short.fits  mrs_residfringe_dithsub_chn4_long.fits  mrs_residfringe_dithsub_chn4_medium.fits  mrs_residfringe_dithsub_chn4_short.fits
MRSStaticRRSRF/utils/: create_delta_apcor.py  create_static_rrsrf.py  helpers.py  leakcor_dithers.py  mrs_helpers.py  proc_mrs.py  rebin_models.py
MRS_PFPC/: create_pfpc.py  pfpc_cor.py  pfpc_proc.py
MRS_PFPC/plotting/: plot_delta_apcor.py  plot_dither_locations.py  plot_overlapcor.py  plot_pfpc.py  plot_pfpc_correction.py  plot_pfpc_merge.py  plot_pfpc_multipanel.py  plot_pfpc_overlap.py  plot_sn_improve.py
MRS_PFPC/refs/: mrs_pfpc_chn1_long.fits  mrs_pfpc_chn1_medium.fits  mrs_pfpc_chn1_short.fits  mrs_pfpc_chn2_long.fits  mrs_pfpc_chn2_medium.fits  mrs_pfpc_chn2_short.fits  mrs_pfpc_chn3_long.fits  mrs_pfpc_chn3_medium.fits  mrs_pfpc_chn3_short.fits  mrs_pfpc_chn4_long.fits  mrs_pfpc_chn4_medium.fits  mrs_pfpc_chn4_short.fits
MRS_PFPC/utils/: coadd_spectra.py  create_delta_apcor.py  fit_trace.py  helpers.py  leakcor_dithers.py  rebin_models.py  sub_dithers.py
leak/: MRS_spectral_leak_fractional.fits
plotting/: plot_spectra_dithers.py  plot_spectra_dithers_divide.py  plot_spectra_dithers_model.py  plot_spectra_stack.py
utils/: leakcor_dithers.py  mrs_helpers.py  proc_mrs.py  rebin_models.py
