[build-system]
requires = [
  "setuptools>=62.1",
  "setuptools_scm[toml]>=8.0.0",
  "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "MRS-PFPC"
description = "MIRI MRS point fixed pattern correction"
requires-python = ">=3.10"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { file = "LICENSE" }
authors = [
  { name = "Karl D. Gordon", email = "kgordon@stsci.edu" },
]
dependencies = [
    "astropy",
]

dynamic = ["version"]

[project.scripts]
pfpc_proc = "MRS_PFPC.pfpc_proc:main"
pfpc_cor = "MRS_PFPC.pfpc_cor:main"
pfpc_plot = "MRS_PFPC.plotting.plot_pfpc:main"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-doctestplus",
    "pytest-cov",
    "matplotlib"
]
docs = [
    "sphinx",
    "sphinx-automodapi",
    "matplotlib",
    "graphviz"
]
[project.urls]
repository = "https://github.com/STScI-MIRI/MRS-PFPC"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["*"]

[tool.setuptools.package-data]
MRS-PFPC = ["data/*"]

[tool.setuptools_scm]
version_file = "MRS_PFPC/version.py"

[tool.pytest.ini_options]
testpaths = [
  "MRS_PFPC",
  "docs",
]
doctest_plus = "enabled"
text_file_format = "rst"
addopts = "--doctest-rst"
norecursedirs = [
  "MRS_PFPC/utils",
  "MRS_PFPC[\\/]_dev",
  "MRS_PFPC/docs/_build/*",
  "MRS_PFPC/docs/api/*"
]

[tool.coverage.run]
omit = [
 "MRS_PFPC/__init*",
 "MRS_PFPC/conftest.py",
 "MRS_PFPC/*setup_package*",
 "MRS_PFPC/tests/*",
 "MRS_PFPC/*/tests/*",
 "MRS_PFPC/extern/*",
 "MRS_PFPC/version*",
 "*/MRS_PFPC/__init*",
 "*/MRS_PFPC/conftest.py",
 "*/MRS_PFPC/*setup_package*",
 "*/MRS_PFPC/tests/*",
 "*/MRS_PFPC/*/tests/*",
 "*/MRS_PFPC/extern/*",
 "*/MRS_PFPC/version*",
]

[tool.coverage.report]
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",
  # Don't complain about packages we have installed
  "except ImportError",
  # Don't complain if tests don't hit assertions
  "raise AssertionError",
  "raise NotImplementedError",
  # Don't complain about script hooks
  "def main(.*):",
  # Ignore branches that don't pertain to this version of Python
  "pragma: py{ignore_python_version}",
  # Don't complain about IPython completion helper
  "def _ipython_key_completions_",
  # typing.TYPE_CHECKING is False at runtime
  "if TYPE_CHECKING:",
  # Ignore typing overloads
  "@overload",
]

[tool.flake8]
    exclude = ["sphinx","*parsetab.py","conftest.py","docs/conf.py","setup.py"]
    max-complexity = 10
    max-line-length = 100
    extend-ignore = """
        W503,
        E203,
        E501,
    """
